--- a/src/css/formNovoCartao.css
+++ b/src/css/formNovoCartao.css
@@ -59,6 +59,7 @@
 	animation: toast 5s ease forwards;
 	box-shadow: 1px 1px 1px rgba(0,0,0,.1);
 	text-align: center;
+	z-index: 1;
 }
 
 .formNovoCartao-msg:first-letter {
